--- a/bookstore/bookstore_web/templates/change_password.html
+++ b/bookstore/bookstore_web/templates/change_password.html
@@ -2,24 +2,25 @@
 
 {% block content %}
     <h1>Change your password</h1>
+    <div style="padding: 0 50px">
     <form action="" method="post" novalidate>
         {{ change_pass_form.hidden_tag() }}
         <p>
-            {{ change_pass_form.old_password.label }}<br>
+{#            {{ change_pass_form.old_password.label }}<br>#}
             {{ change_pass_form.old_password(size=32) }}
             {% for error in change_pass_form.old_password.errors %}
                 <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
         <p>
-            {{ change_pass_form.new_password.label }}<br>
+{#            {{ change_pass_form.new_password.label }}<br>#}
             {{ change_pass_form.new_password(size=32) }}
             {% for error in change_pass_form.new_password.errors %}
                 <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
         <p>
-            {{ change_pass_form.confirm.label }}<br>
+{#            {{ change_pass_form.confirm.label }}<br>#}
             {{ change_pass_form.confirm(size=32) }}
             {% for error in change_pass_form.confirm.errors %}
                 <span style="color: red;">[{{ error }}]</span>
@@ -27,4 +28,5 @@
         </p>
         <p>{{ change_pass_form.change() }}</p>
     </form>
+    </div>
 {% endblock %}
