--- a/bookstore/bookstore_web/templates/delete_user.html
+++ b/bookstore/bookstore_web/templates/delete_user.html
@@ -2,10 +2,12 @@
 
 {% block content %}
     <h1>User deletion</h1>
-    Are you <u>sure</u>, you want delete your account?<br>
-    It's irreversible, all your data will be lost.<br>
-    <form action="" method="post" novalidate>
-        {{ delete_form.hidden_tag() }}
-        {{ delete_form.delete() }}
-    </form>
+    <div style="padding: 0 50px">
+        Are you <u>sure</u>, you want delete your account?<br>
+        It's irreversible, all your data will be lost.<br><br>
+        <form action="" method="post" novalidate>
+            {{ delete_form.hidden_tag() }}
+            {{ delete_form.delete() }}
+        </form>
+    </div>
 {% endblock %}
