--- a/bookstore/bookstore_web/templates/privacy_policy.html
+++ b/bookstore/bookstore_web/templates/privacy_policy.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-        <h1>PRIVACY POLICY</h1>
+    <h1>Privacy policy</h1>
+    <div style="padding: 0 20px">
         <h2>Definitions</h2>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam
             malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
@@ -11,4 +12,5 @@
             Sed arcu. Cras consequat.</p>
         <p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas auguae, eu vulputate magna eros eu erat.
             Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</p>
+    </div>
 {% endblock %}
