--- a/bookstore/bookstore_web/templates/terms_of_use.html
+++ b/bookstore/bookstore_web/templates/terms_of_use.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-        <h1>TERMS OF USE</h1>
+    <h1>Terms of use</h1>
+    <div style="padding: 0 20px">
         <h2>Definitions</h2>
         <ol>
             <li>Lorem ipsum dolor sit amet.</li>
@@ -28,5 +29,6 @@
                 pellentesque felis.
             </li>
         </ol>
-    <h2>§ 2. Lorem ipsum</h2>
+        <h2>§ 2. Lorem ipsum</h2>
+    </div>
 {% endblock %}
