--- a/bookstore/bookstore_web/templates/cart.html
+++ b/bookstore/bookstore_web/templates/cart.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <h1>Cart</h1>
+    <div style="padding: 0 20px">
     {% if user_cart %}
         {% for book, quantity in user_cart.items() %}
             <p><a href="{{ url_for('item', book_id=book.book_id) }}">
@@ -25,4 +26,5 @@
     {% else %}
         <p>Your cart is empty</p>
     {% endif %}
+    </div>
 {% endblock %}
