--- a/bookstore/bookstore_web/templates/order.html
+++ b/bookstore/bookstore_web/templates/order.html
@@ -1,43 +1,53 @@
 {% extends 'base.html' %}
 {% block content %}
     <h1>Order</h1>
-    {% if missing_fields %}
-        <h3 style="color: red;" >Before you order items...</h3>
-        <p>Following data are missing in your account:</p>
-        {% for field in missing_fields %}
-            <li>{{ field }}</li>
-        {% endfor %}
-        <p>Please complete your profile: <a href={{ url_for('edit_user') }}>edit profile data</a></p>
-    {% else %}
-        <h2>Your order:</h2>
-        <table style="width:100%">
-            <tr>
-                <td><b>item</b></td>
-                <td><b>unit price* [{{ currency }}]</b></td>
-                <td><b>quantity</b></td>
-                <td><b>cost [{{ currency }}]</b></td>
-            </tr><b></b>
-            {% for item in user_cart %}
+    <div style="padding: 0 20px">
+        {% if missing_fields %}
+            <h3 style="color: red;">Before you order items...</h3>
+            <p>Following data are missing in your account:</p>
+            <ul>
+                {% for field in missing_fields %}
+                    <li>{{ field }}</li>
+                {% endfor %}
+            </ul>
+            <p>Please complete your profile: <a name="profile" href={{ url_for('edit_user') }}>edit profile data</a></p>
+        {% else %}
+            <h2>Your order:</h2>
+            <table style="width:100%">
                 <tr>
-                    <td>{{ item['name'] }}</td>
-                    <td>{{ '{:.2f}'.format(item['price']) }}</td>
-                    <td>{{ item['quantity'] }}</td>
-                    <td>{{ '{:.2f}'.format(item['cost']) }}</td>
+                    <th align="left">item</th>
+                    <th align="left">unit price* [{{ currency }}]</th>
+                    <th align="left">quantity</th>
+                    <th align="left">cost [{{ currency }}]</th>
                 </tr>
-            {% endfor %}
-            <tr>
-                <td></td>
-                <td></td>
-                <td align="right"><b>Total:</b></td>
-                <td align="left"><b>{{ '{:.2f}'.format(total) }}</b></td>
-            </tr>
-        </table>
+                {% for item in user_cart %}
+                    <tr>
+                        <td>{{ item['name'] }}</td>
+                        <td>{{ '{:.2f}'.format(item['price']) }}</td>
+                        <td>{{ item['quantity'] }}</td>
+                        <td>{{ '{:.2f}'.format(item['cost']) }}</td>
+                    </tr>
+                {% endfor %}
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td align="right"><b>Total:</b></td>
+                    <td align="left"><b>{{ '{:.2f}'.format(total) }}</b></td>
+                </tr>
+            </table>
 
-        * unit price includes discount
-        <h2>Delivery address:</h2>
-        <p>You can change delivery address <a href={{ url_for('edit_user') }}>here</a>.</p>
-        {{ current_user }}<br>{{ current_user.street }}<br>{{ current_user.postal_code }} {{ current_user.city }}<br>{{ current_user.country }}<br>(phone: {{ current_user.phone }})
+            <p style="color: #696763">* unit price includes discount</p>
+            <h2>Delivery address:</h2>
+            <p style="color: #696763">You can change delivery address <a href={{ url_for('edit_user') }}>here</a>.</p>
+            <div style="border: 1px solid black; width: 20%; padding: 30px">
+                {{ current_user }}<br>{{ current_user.street }}<br>{{ current_user.postal_code }} {{ current_user.city }}
+                <br>
+                {{ current_user.country }}<br>(phone: {{ current_user.phone }})
+            </div>
 
-        <p><button>Confirm & Pay</button></p>
-    {% endif %}
+            <p>
+                <button>Confirm & Pay</button>
+            </p>
+        {% endif %}
+    </div>
 {% endblock %}
