--- a/bookstore/bookstore_web/templates/order.html
+++ b/bookstore/bookstore_web/templates/order.html
@@ -45,7 +45,7 @@
                 {{ current_user.country }}<br>(phone: {{ current_user.phone }})
             </div>
 
-            <p>
+            <p style="padding: 0 50px">
                 <button>Confirm & Pay</button>
             </p>
         {% endif %}
