--- a/bookstore/bookstore_web/templates/index.html
+++ b/bookstore/bookstore_web/templates/index.html
@@ -21,7 +21,7 @@
                     <s>{{ '{:.2f}'.format(book.price) }} {{ currency }}</s> {{ '{:.2f}'.format(book.price - book.price*book.discount/100) }} {{ currency }},
                     discount: {{ '{:.0f}'.format(book.discount) }}%
                     <br>
-                    {% if current_user.is_authenticated %}
+                    {% if current_user.is_authenticated and book.quantity!=0  %}
                         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
                         <script type=text/javascript>
                             $(function () {
